# radops

./: .gitignore  LICENSE  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: pylint.yml  tests.yml
config/: config.example.yaml  config.yaml  integrations.example.yaml  integrations.yaml  rbac.example.yaml  rbac.yaml  server.example.yaml  tools.example.yaml  tools.yaml
config/prompts/: cloud_agent_prompt.txt  kb_device_prompt.txt  kb_github_prompt.txt  network_agent_prompt.txt  support_agent_prompt.txt
data/: router1_lax01.txt  router1_sjc01.txt
docs/: README.md  agent_discovery.md  cli.md  config_guide.md  creating_skills.md  integrations_guide.md  kb_rag.md  metrics.md  playground.md  quick_start.md  rbac_guide.md  system_guide.md  tools_guide.md  workflows.md
examples/knowledge_base/devices/: router1_lax01.txt
examples/prompts/: auditor_prompt.txt  cloud_agent_prompt.txt  guardrails_prompt.txt  kb_device_prompt.txt  kb_github_prompt.txt  kb_team_prompt.txt  network_agent_prompt.txt  supervisor_prompt.txt  supervisor_prompt_discovery.txt  support_agent_prompt.txt
skills/example/: SKILL.md
skills/ripe-bgp-activity/: SKILL.md
skills/ripe-bgp-state/: SKILL.md
skills/ripe-dns-chain/: SKILL.md
src/: __init__.py  console.py  server.py  tools.py
src/config/: config.py  integrations.py  rbac.py  server.py  tools.py  utils.py
src/core/: auth.py  checkpoint.py  graph.py  llm.py  mcp_client.py  memory.py  skill.py  state.py  vector_store.py
src/integrations/fs/: fs_loader.py
src/integrations/github/: github_loader.py
src/integrations/google/: gdrive_loader.py
src/integrations/notion/: __init__.py  notion_loader.py
src/integrations/slack/: README.md  slack.py
src/libs/: logger.py  secrets.py
src/mcp_servers/: app.py
src/playground/: cli.py  ui.py
src/prompts/: guardrail.py  system.py
src/registry/: tools.py
src/services/guardrails/: guardrails.py
src/services/learning/: recorder.py
src/services/telemetry/: metrics.py  telemetry.py
src/services/tools/aws/: diagnostics.py  ec2.py  network.py  troubleshooting.py
src/services/tools/checkhost/: check_host_net.py
src/services/tools/executors/: python_executor.py  shell_executor.py
src/services/tools/geoip/: geoip.py
src/services/tools/github/: helper.py  issue.py  pull_request.py
src/services/tools/jira/: jira_tools.py
src/services/tools/lg/: lg.py
src/services/tools/nautobot/: circuits.py  client.py  dcim.py  devices.py  ipam.py
src/services/tools/network/checkhost/: check_host_net.py
src/services/tools/network/geoip/: geoip.py
src/services/tools/network/lg/: lg.py
src/services/tools/network/peeringdb/: peeringdb.py
src/services/tools/peeringdb/: peeringdb.py
src/services/tools/system/config/: secrets.py
src/services/tools/system/history/: history_tools.py  long_memory.py
src/services/tools/system/kb/: kb_tools.py
src/services/tools/system/system/: system.py
src/storage/: chromadb.py  faiss.py  memory.py  milvus.py  pinecone.py  protocols.py  qdrant.py  registry.py  utils.py  weaviatedb.py
src/utils/: logger.py  status_generator.py  vault_resolver.py
tests/: conftest.py  test_config_integrations.py  test_console.py  test_graph.py  test_graph_fake.py  test_server.py
tests/unit_tests/: test_auth_authorization.py  test_auth_extended.py  test_chromadb.py  test_config.py  test_console.py  test_core.py  test_executor.py  test_graph.py  test_graph_fake.py  test_milvus.py  test_pinecone.py  test_prompts.py  test_qdrant.py  test_registry.py  test_server.py  test_services.py  test_skill.py  test_state_extended.py  test_system.py  test_system_tools.py  test_utils.py  test_weaviatedb.py
workflows/: host_health_check.md
