[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "RadOps"
version = "0.1.0"
description = "AI-powered Network Operations"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.123.4",
    "uvicorn[standard]==0.38.0",
    "langgraph==1.0.3",
    "langchain-core==1.1.0",
    "langchain-openai==1.0.3",
    "langchain-ollama==1.0.0",
    "langchain-community==0.4.1",
    "langchain-chroma==1.0.0",
    "langchain-weaviate==0.0.6",
    "langchain-text-splitters==1.0.0",
    "langchain-mcp-adapters==0.1.13",
    "pydantic==2.12.5",
    "pydantic-settings==2.12.0",
    "redis==6.4.0",
    "mem0ai==1.0.1",
    "jira==3.10.5",
    "pygithub==2.8.1",
    "google-auth==2.41.1",
    "google-auth-oauthlib==1.2.3",
    "google-api-python-client==2.187.0",
    "chromadb==1.3.5",
    "weaviate-client==4.18.1",
    "pyyaml==6.0.3",
    "httpx==0.28.1",
    "tiktoken==0.12.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.13.2",
    "aiopg==1.4.0",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anthropic==0.74.1",
    "anyio==4.11.0",
    "asgiref==3.10.0",
    "astroid==4.0.2",
    "async-hvac==0.7.4",
    "async-timeout==4.0.3",
    "attrs==25.4.0",
    "authlib==1.6.5",
    "backoff==2.2.1",
    "bcrypt==5.0.0",
    "beautifulsoup4==4.14.2",
    "boto3==1.42.11",
    "botocore==1.42.11",
    "build==1.3.0",
    "cachetools==6.2.2",
    "certifi==2025.11.12",
    "cffi==2.0.0",
    "charset-normalizer==3.4.4",
    "click==8.3.1",
    "coloredlogs==15.0.1",
    "confu==1.9.0",
    "cryptography==46.0.3",
    "curl-cffi==0.13.0",
    "dataclasses-json==0.6.7",
    "defusedxml==0.7.1",
    "deprecation==2.1.0",
    "dill==0.4.0",
    "distro==1.9.0",
    "django==5.2.8",
    "django-countries==8.1.1",
    "django-handleref==2.0.1",
    "django-inet==1.1.1",
    "django-peeringdb==3.7.0",
    "docstring-parser==0.17.0",
    "durationpy==0.10",
    "dydantic==0.0.8",
    "filelock==3.20.0",
    "flake8==7.3.0",
    "flatbuffers==25.9.23",
    "frozendict==2.4.7",
    "frozenlist==1.8.0",
    "fsspec==2025.10.0",
    "geoip2==5.2.0",
    "google-api-core==2.28.1",
    "google-auth-httplib2==0.2.1",
    "googleapis-common-protos==1.72.0",
    "grpcio==1.76.0",
    "h11==0.16.0",
    "h2==4.3.0",
    "hf-xet==1.2.0",
    "hpack==4.1.0",
    "httpcore==1.0.9",
    "httplib2==0.31.0",
    "httptools==0.7.1",
    "httpx-sse==0.4.3",
    "huggingface-hub==1.1.4",
    "humanfriendly==10.0",
    "hvac==2.4.0",
    "hyperframe==6.1.0",
    "idna==3.11",
    "importlib-metadata==8.7.0",
    "importlib-resources==6.5.2",
    "iniconfig==2.3.0",
    "isort==7.0.0",
    "jiter==0.12.0",
    "jmespath==1.0.1",
    "jsonpatch==1.33",
    "jsonpath-ng==1.7.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.25.1",
    "jsonschema-specifications==2025.9.1",
    "kubernetes==34.1.0",
    "langchain==1.1.0",
    "langchain-anthropic==1.1.0",
    "langchain-classic==1.0.0",
    "langchain-tools==0.1.34",
    "langgraph-checkpoint==3.0.1",
    "langgraph-checkpoint-postgres==3.0.1",
    "langgraph-checkpoint-redis==0.2.1",
    "langgraph-checkpoint-sqlite==3.0.0",
    "langgraph-prebuilt==1.0.4",
    "langgraph-sdk==0.2.9",
    "langmem==0.0.30",
    "langsmith==0.4.43",
    "markdown-it-py==4.0.0",
    "marshmallow==3.26.1",
    "maxminddb==3.0.0",
    "mccabe==0.7.0",
    "mcp==1.21.2",
    "mdurl==0.1.2",
    "ml-dtypes==0.5.4",
    "mmh3==5.2.0",
    "mpmath==1.3.0",
    "multidict==6.7.0",
    "multitasking==0.0.12",
    "munge==1.4.0",
    "mypy-extensions==1.1.0",
    "numpy==2.3.5",
    "oauthlib==3.3.1",
    "ollama==0.6.1",
    "onnxruntime==1.23.2",
    "openai==2.8.0",
    "opentelemetry-api==1.38.0",
    "opentelemetry-exporter-otlp==1.38.0",
    "opentelemetry-exporter-otlp-proto-common==1.38.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.38.0",
    "opentelemetry-exporter-otlp-proto-http==1.38.0",
    "opentelemetry-exporter-prometheus==0.59b0",
    "opentelemetry-proto==1.38.0",
    "opentelemetry-sdk==1.38.0",
    "opentelemetry-semantic-conventions==0.59b0",
    "orjson==3.11.4",
    "ormsgpack==1.12.0",
    "overrides==7.7.0",
    "packaging==25.0",
    "pagerduty==6.1.0",
    "pandas==2.3.3",
    "pdpyras==5.4.1",
    "peeringdb==2.4.1",
    "peewee==3.18.3",
    "platformdirs==4.5.0",
    "pluggy==1.6.0",
    "ply==3.11",
    "portalocker==3.2.0",
    "posthog==5.4.0",
    "prometheus-client==0.23.1",
    "propcache==0.4.1",
    "proto-plus==1.26.1",
    "protobuf==5.29.5",
    "psycopg==3.2.12",
    "psycopg-binary==3.2.12",
    "psycopg-pool==3.2.7",
    "psycopg2-binary==2.9.11",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pybase64==1.4.2",
    "pycodestyle==2.14.0",
    "pycparser==2.23",
    "pydantic-core==2.41.5",
    "pyflakes==3.4.0",
    "pygments==2.19.2",
    "pyjwt==2.10.1",
    "pylint==4.0.4",
    "pynacl==1.6.1",
    "pyparsing==3.2.5",
    "pypika==0.48.9",
    "pyproject-hooks==1.2.0",
    "pytest==9.0.2",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.1",
    "python-multipart==0.0.20",
    "python-ulid==3.1.0",
    "pytz==2025.2",
    "qdrant-client==1.16.1",
    "redisvl==0.12.0",
    "referencing==0.37.0",
    "regex==2025.11.3",
    "requests==2.32.5",
    "requests-oauthlib==2.0.0",
    "requests-toolbelt==1.0.0",
    "rich==14.2.0",
    "rpds-py==0.29.0",
    "rsa==4.9.1",
    "ruff==0.14.9",
    "s3transfer==0.16.0",
    "shellingham==1.5.4",
    "simsimd==6.5.3",
    "six==1.17.0",
    "slack-bolt==1.27.0",
    "slack-sdk==3.39.0",
    "sniffio==1.3.1",
    "soupsieve==2.8",
    "sqlalchemy==2.0.44",
    "sqlite-vec==0.1.6",
    "sqlparse==0.5.3",
    "sse-starlette==3.0.3",
    "starlette==0.50.0",
    "sympy==1.14.0",
    "tenacity==9.1.2",
    "tokenizers==0.22.1",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "tqdm==4.67.1",
    "trustcall==0.0.39",
    "twentyc-rpc==1.0.0",
    "typer==0.20.0",
    "typer-slim==0.20.0",
    "typing-inspect==0.9.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "tzdata==2025.2",
    "uritemplate==4.2.0",
    "urllib3==2.3.0",
    "uuid-utils==0.12.0",
    "uv==0.9.18",
    "uvloop==0.22.1",
    "validators==0.35.0",
    "watchfiles==1.1.1",
    "websocket-client==1.9.0",
    "websockets==15.0.1",
    "wsproto==1.3.2",
    "xxhash==3.6.0",
    "yarl==1.22.0",
    "yfinance==0.2.66",
    "zipp==3.23.0",
    "zstandard==0.25.0",
    "langchain-pinecone>=0.2.13",
    "langchain-qdrant>=1.1.0",
    "langchain-milvus>=0.3.2",
]

[project.optional-dependencies]
dev = [
    "pylint",
    "pytest",
    "pytest-asyncio"
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = [".", "app"]
norecursedirs = ["tests/evaluations", "tests/integration"]
asyncio_mode = "auto"
